Calender fixes updated

--- a/src/app/pages/calendar/calendar.component.html
+++ b/src/app/pages/calendar/calendar.component.html
@@ -16,3 +16,26 @@
       </div>
     </div>
   </div>
+
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog modal-xl">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title pull-left">Sample Modal</h4>
+                <button type="button" class="btn-close close pull-right" aria-label="Close" data-dismiss="modal">
+                    <span aria-hidden="true" class="visually-hidden">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body jezsel-profile-myord-pp">
+                <div class="container profile-popup-content table-responsive pb-4">
+                    
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Sluiten</button>
+            </div>
+        </div>
+    </div>
+</div>
