--- a/src/app/pages/calendar/calendar.component.html
+++ b/src/app/pages/calendar/calendar.component.html
@@ -21,20 +21,99 @@
     <div class="modal-dialog modal-xl">
 
         <!-- Modal content-->
-        <div class="modal-content">
+        <div class="modal-content" *ngIf="selectedEvent">
             <div class="modal-header">
-                <h4 class="modal-title pull-left">Sample Modal</h4>
+                <h4 class="modal-title pull-left">{{selectedEventTitle}}</h4>
                 <button type="button" class="btn-close close pull-right" aria-label="Close" data-dismiss="modal">
                     <span aria-hidden="true" class="visually-hidden">&times;</span>
                 </button>
             </div>
             <div class="modal-body jezsel-profile-myord-pp">
                 <div class="container profile-popup-content table-responsive pb-4">
-                    
+                  <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <label>Title</label>
+                            <div>{{selectedEventTitle}}</div>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <label>Description</label>
+                            <div>{{selectedEvent.description}}</div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label>Category</label>
+                            <div>{{selectedEvent.Category?.title}}</div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label>Function</label>
+                            <div>{{selectedEvent.function}}</div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label>Cancel Period</label>
+                            <div>{{selectedEvent.cancelperiod}}</div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label>Work date</label>
+                            <div>{{selectedEvent.workstartdate}} {{selectedEvent.worktime}} - {{selectedEvent.workenddate}} {{selectedEvent.worktime}}</div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label>Break</label>
+                            <div>{{selectedEvent.fromtime}}</div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label>Contact Person</label>
+                            <div>{{selectedEvent.contact}}</div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label>Rate</label>
+                            <div>{{selectedEvent.rate}}</div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label>Time Controller</label>
+                            <div>{{selectedEvent.timecontroller}}</div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label>Freelancers / Temporary worker</label>
+                            <div>{{selectedEvent.worktype}}</div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label>Staff Needed</label>
+                            <div>{{selectedEvent.staffneeded}}</div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                      <div class="form-group">
+                          <label>Status</label>
+                          <div [innerHtml]="getEventStatus(selectedEvent)">{{selectedEvent.staffneeded}}</div>
+                      </div>
+                  </div>
+                </div>
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal">Sluiten</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal" (close)="cancel()">Sluiten</button>
             </div>
         </div>
     </div>
