--- a/src/app/pages/place-orders/place-orders.component.html
+++ b/src/app/pages/place-orders/place-orders.component.html
@@ -87,9 +87,9 @@
                                                     <div class="col-md-6">
                                                         <div class="form-group">
                                                             <label>Break</label>
-                                                            <input type="time" class="form-control"
-                                                                placeholder="Work time - HH:mm"
-                                                                formControlName="worktime">
+                                                            <input type="text" class="form-control"
+                                                                placeholder="Break in Hours"
+                                                                formControlName="fromtime">
                                                         </div>
                                                     </div>
                                                     <div class="col-md-6">
@@ -124,6 +124,14 @@
                                                                 <option value="Temporary worker">Temporary worker
                                                                 </option>
                                                             </select>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-md-6">
+                                                        <div class="form-group">
+                                                            <label>Staff Needed</label>
+                                                            <input type="text" class="form-control"
+                                                                placeholder="Staff Needed"
+                                                                formControlName="staffneeded">
                                                         </div>
                                                     </div>
                                                 </div>
